# NotebookLM-Study-Guide-Automator

./: .gitignore  README.md  diagram_generator.py  generate_single.py  marcelo-earth-generative-manim-8a5edab282632443.txt  md_to_latex_converter.py  notebook_automator.py  pipeline_gui.py  pyproject.toml  server.py  study_guide_generator.py  teleprompter_ui.py  topics.md
generated_manim_scripts/: KMapIntroduction.py  KMapPlacingValuesSOPPOS.py  KMapStructureAndGrayCode.py  input_files.txt
gm/: git_committer.py  manifest_generator.py  manifest_validator.py  queue_interface.py  render_policy.py
gm/tests/: test_git_committer.py  test_manifest_generator.py  test_manifest_validator.py  test_queue_interface.py  test_render_policy.py
studyguides/: final_study_guide.md  study_guide.tex  study_guide_CLEAN.tex
